ejercicio con flex

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style6.css">
     <title>Ada Lovelace</title>
 </head>
 
 <body>
-    <h1>Ada Lovelace</h1>
-    <p>Programas vistos en Desarrollo Web</p>
+    <h1>Mis conocimientos</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias consequuntur vel ab quas
+        architecto. </p>
     <div class="contenedora">
 
         <div class="seccion-principal">
@@ -44,7 +45,7 @@
             <p>GIT</p>
         </div>
 
-    </div>
+    
 
 </body>
 
